# gamble

./: .envrc  .gitignore  .prospector.yaml  .travis.yml  LICENSE  Pipfile  README.md  README.rst  default.nix  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  shell.nix  test_cards.py  testes_funcionais.py  tests_baccarat.py  tests_blackjack.py  tox.ini
.github/workflows/: deploy.yml  main.yml  stale.yml  test.yml
TestesFuncionaisBaccarat/: main.py
TestesFuncionaisBlackJack/: __init__.py  bacarat.py  main.py
__ExecucaoDosJogos/: main.py
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: overrides.css
gamble/: __init__.py  errors.py  globals.py
gamble/models/: Baccarat.py  BlackJack.py  __init__.py  cards.py  dice.py  golf.py
tests/: __init__.py  conftest.py
tests/models/: __init__.py  test_cards.py  test_dice.py
